--- a/index.html
+++ b/index.html
@@ -401,6 +401,44 @@
         </section>
 
 
+        <footer>
+
+
+            <div>
+
+
+                <h1>Influencer products</h1>
+                <p>Copyright © 2022 influencer products</p>
+                <p>All rights reserved</p>
+
+
+
+
+
+                <p><a href=""><i class="fab fa-instagram"></i></a>
+                    <a href=""><i class="fab fa-twitter"></i></a>
+                    <a href=""><i class="fab fa-facebook"></i></a>
+                    <a href=""><i class="fab fa-youtube"></i></a>
+                </p>
+
+
+
+
+
+
+
+
+
+
+
+
+            </div>
+
+
+
+        </footer>
+
+
 
 
 
