--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
                     <h1>Start your Journey as
                         Influencer</h1>
 
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum sed scelerisque eros.
-                        Lectus faucibus.</p>
+                    <p>An influencer is someone in your niche or industry with sway over your target audience.
+                        Influencers have specialized knowledge, authority or insight into a specific subject.</p>
 
                     <button class="btn" style="text-align: center;">Read More <i
                             class="fas fa-arrow-right"></i></button>
@@ -73,7 +73,7 @@
                 <div class="product">
 
                     <div class="product-img">
-                        <img src="img/airpod.png" alt="">
+                        <img src="img/tripod.png" alt="">
                     </div>
 
                     <div class="product-detail">
@@ -100,11 +100,11 @@
                 <div class="product">
 
                     <div class="product-img">
-                        <img src="img/airpod.png" alt="">
+                        <img src="img/mic.png  " alt="">
                     </div>
 
                     <div class="product-detail">
-                        <h1>Flex Tripod</h1>
+                        <h1>Microphone</h1>
                         <p class="product-price">$100</p>
 
                         <div class="product-rating">
@@ -131,8 +131,89 @@
                     </div>
 
                     <div class="product-detail">
-                        <h1>Flex Tripod</h1>
+                        <h1>Airbuds</h1>
                         <p class="product-price">$100</p>
+
+                        <div class="product-rating">
+
+                            <i class="fas fa-star fill"></i>
+                            <i class="fas fa-star fill"></i>
+                            <i class="fas fa-star fill"></i>
+                            <i class="fas fa-star fill"></i>
+                            <i class="fas fa-star emty"></i>
+                            4.9
+                        </div>
+                        <p class="product-info">Wordwide shifting available
+                            Buyers protection possible!</p>
+
+
+                    </div>
+
+
+                </div>
+                <div class="product">
+
+                    <div class="product-img">
+                        <img src="img/drone.png" alt="">
+                    </div>
+
+                    <div class="product-detail">
+                        <h1>Drone</h1>
+                        <p class="product-price">$984.54</p>
+
+                        <div class="product-rating">
+
+                            <i class="fas fa-star fill"></i>
+                            <i class="fas fa-star fill"></i>
+                            <i class="fas fa-star fill"></i>
+                            <i class="fas fa-star emty"></i>
+                            <i class="fas fa-star emty"></i>
+                            3.0
+                        </div>
+                        <p class="product-info">Wordwide shifting available
+                            Buyers protection possible!</p>
+
+
+                    </div>
+
+
+                </div>
+                <div class="product">
+
+                    <div class="product-img">
+                        <img src="img/lights.png" alt="">
+                    </div>
+
+                    <div class="product-detail">
+                        <h1>Light Setup</h1>
+                        <p class="product-price">$1400</p>
+
+                        <div class="product-rating">
+
+                            <i class="fas fa-star fill"></i>
+                            <i class="fas fa-star fill"></i>
+                            <i class="fas fa-star fill"></i>
+                            <i class="fas fa-star fill"></i>
+                            <i class="fas fa-star fill"></i>
+                            5.00
+                        </div>
+                        <p class="product-info">Wordwide shifting available
+                            Buyers protection possible!</p>
+
+
+                    </div>
+
+
+                </div>
+                <div class="product">
+
+                    <div class="product-img">
+                        <img src="img/setup.png" alt="">
+                    </div>
+
+                    <div class="product-detail">
+                        <h1>Photoshoot Set</h1>
+                        <p class="product-price">$1000</p>
 
                         <div class="product-rating">
 
@@ -155,6 +236,87 @@
 
                     <div class="product-img">
                         <img src="img/airpod.png" alt="">
+                    </div>
+
+                    <div class="product-detail">
+                        <h1>Vlogging Camera</h1>
+                        <p class="product-price">$2363.67</p>
+
+                        <div class="product-rating">
+
+                            <i class="fas fa-star fill"></i>
+                            <i class="fas fa-star fill"></i>
+                            <i class="fas fa-star fill"></i>
+                            <i class="fas fa-star fill"></i>
+                            <i class="fas fa-star emty"></i>
+                            4.0
+                        </div>
+                        <p class="product-info">Wordwide shifting available
+                            Buyers protection possible!</p>
+
+
+                    </div>
+
+
+                </div>
+                <div class="product">
+
+                    <div class="product-img">
+                        <img src="img/single-light.png" alt="">
+                    </div>
+
+                    <div class="product-detail">
+                        <h1>Green Screen</h1>
+                        <p class="product-price">$10</p>
+
+                        <div class="product-rating">
+
+                            <i class="fas fa-star fill"></i>
+                            <i class="fas fa-star fill"></i>
+                            <i class="fas fa-star fill"></i>
+                            <i class="fas fa-star fill"></i>
+                            <i class="fas fa-star fill"></i>
+                            5.00
+                        </div>
+                        <p class="product-info">Wordwide shifting available
+                            Buyers protection possible!</p>
+
+
+                    </div>
+
+
+                </div>
+                <div class="product">
+
+                    <div class="product-img">
+                        <img src="img/action.png" alt="">
+                    </div>
+
+                    <div class="product-detail">
+                        <h1>Action Camera</h1>
+                        <p class="product-price">$467</p>
+
+                        <div class="product-rating">
+
+                            <i class="fas fa-star fill"></i>
+                            <i class="fas fa-star fill"></i>
+                            <i class="fas fa-star fill"></i>
+                            <i class="fas fa-star fill"></i>
+                            <i class="fas fa-star emty"></i>
+                            4.0
+                        </div>
+                        <p class="product-info">Wordwide shifting available
+                            Buyers protection possible!</p>
+
+
+                    </div>
+
+
+                </div>
+                <div class="product">
+
+                    <div class="product-img">
+                        <img src="img/tripod.png" alt="">
                     </div>
 
                     <div class="product-detail">
@@ -181,11 +343,11 @@
                 <div class="product">
 
                     <div class="product-img">
-                        <img src="img/airpod.png" alt="">
+                        <img src="img/mic.png  " alt="">
                     </div>
 
                     <div class="product-detail">
-                        <h1>Flex Tripod</h1>
+                        <h1>Microphone</h1>
                         <p class="product-price">$100</p>
 
                         <div class="product-rating">
@@ -212,7 +374,7 @@
                     </div>
 
                     <div class="product-detail">
-                        <h1>Flex Tripod</h1>
+                        <h1>Airbuds</h1>
                         <p class="product-price">$100</p>
 
                         <div class="product-rating">
@@ -222,7 +384,7 @@
                             <i class="fas fa-star fill"></i>
                             <i class="fas fa-star fill"></i>
                             <i class="fas fa-star emty"></i>
-                            4.5
+                            4.9
                         </div>
                         <p class="product-info">Wordwide shifting available
                             Buyers protection possible!</p>
@@ -232,168 +394,7 @@
 
 
                 </div>
-                <div class="product">
 
-                    <div class="product-img">
-                        <img src="img/airpod.png" alt="">
-                    </div>
-
-                    <div class="product-detail">
-                        <h1>Flex Tripod</h1>
-                        <p class="product-price">$100</p>
-
-                        <div class="product-rating">
-
-                            <i class="fas fa-star fill"></i>
-                            <i class="fas fa-star fill"></i>
-                            <i class="fas fa-star fill"></i>
-                            <i class="fas fa-star fill"></i>
-                            <i class="fas fa-star emty"></i>
-                            4.5
-                        </div>
-                        <p class="product-info">Wordwide shifting available
-                            Buyers protection possible!</p>
-
-
-                    </div>
-
-
-                </div>
-                <div class="product">
-
-                    <div class="product-img">
-                        <img src="img/airpod.png" alt="">
-                    </div>
-
-                    <div class="product-detail">
-                        <h1>Flex Tripod</h1>
-                        <p class="product-price">$100</p>
-
-                        <div class="product-rating">
-
-                            <i class="fas fa-star fill"></i>
-                            <i class="fas fa-star fill"></i>
-                            <i class="fas fa-star fill"></i>
-                            <i class="fas fa-star fill"></i>
-                            <i class="fas fa-star emty"></i>
-                            4.5
-                        </div>
-                        <p class="product-info">Wordwide shifting available
-                            Buyers protection possible!</p>
-
-
-                    </div>
-
-
-                </div>
-                <div class="product">
-
-                    <div class="product-img">
-                        <img src="img/airpod.png" alt="">
-                    </div>
-
-                    <div class="product-detail">
-                        <h1>Flex Tripod</h1>
-                        <p class="product-price">$100</p>
-
-                        <div class="product-rating">
-
-                            <i class="fas fa-star fill"></i>
-                            <i class="fas fa-star fill"></i>
-                            <i class="fas fa-star fill"></i>
-                            <i class="fas fa-star fill"></i>
-                            <i class="fas fa-star emty"></i>
-                            4.5
-                        </div>
-                        <p class="product-info">Wordwide shifting available
-                            Buyers protection possible!</p>
-
-
-                    </div>
-
-
-                </div>
-                <div class="product">
-
-                    <div class="product-img">
-                        <img src="img/airpod.png" alt="">
-                    </div>
-
-                    <div class="product-detail">
-                        <h1>Flex Tripod</h1>
-                        <p class="product-price">$100</p>
-
-                        <div class="product-rating">
-
-                            <i class="fas fa-star fill"></i>
-                            <i class="fas fa-star fill"></i>
-                            <i class="fas fa-star fill"></i>
-                            <i class="fas fa-star fill"></i>
-                            <i class="fas fa-star emty"></i>
-                            4.5
-                        </div>
-                        <p class="product-info">Wordwide shifting available
-                            Buyers protection possible!</p>
-
-
-                    </div>
-
-
-                </div>
-                <div class="product">
-
-                    <div class="product-img">
-                        <img src="img/airpod.png" alt="">
-                    </div>
-
-                    <div class="product-detail">
-                        <h1>Flex Tripod</h1>
-                        <p class="product-price">$100</p>
-
-                        <div class="product-rating">
-
-                            <i class="fas fa-star fill"></i>
-                            <i class="fas fa-star fill"></i>
-                            <i class="fas fa-star fill"></i>
-                            <i class="fas fa-star fill"></i>
-                            <i class="fas fa-star emty"></i>
-                            4.5
-                        </div>
-                        <p class="product-info">Wordwide shifting available
-                            Buyers protection possible!</p>
-
-
-                    </div>
-
-
-                </div>
-                <div class="product">
-
-                    <div class="product-img">
-                        <img src="img/airpod.png" alt="">
-                    </div>
-
-                    <div class="product-detail">
-                        <h1>Flex Tripod</h1>
-                        <p class="product-price">$100</p>
-
-                        <div class="product-rating">
-
-                            <i class="fas fa-star fill"></i>
-                            <i class="fas fa-star fill"></i>
-                            <i class="fas fa-star fill"></i>
-                            <i class="fas fa-star fill"></i>
-                            <i class="fas fa-star emty"></i>
-                            4.5
-                        </div>
-                        <p class="product-info">Wordwide shifting available
-                            Buyers protection possible!</p>
-
-
-                    </div>
-
-
-                </div>
 
             </div>
 
