--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
         <section class="container">
 
-            <h1>Pu</h1>
+            <h1>Popular Collection</h1>
 
             <div class="products">
 
