contact form complete

--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@
                     <p>An influencer is someone in your niche or industry with sway over your target audience.
                         Influencers have specialized knowledge, authority or insight into a specific subject.</p>
 
-                    <button class="btn" style="text-align: center;">Read More <i
-                            class="fas fa-arrow-right"></i></button>
+                    <button class="btn"><span>Read More <i class="fas fa-arrow-right"></i></span></button>
 
 
 
@@ -411,6 +410,31 @@
         <section class="arrow">
 
             <p class="buttom-arrow"> <a href="">See More <i class="fas fa-arrow-right"></i></a></p>
+        </section>
+
+
+        <section class="container">
+            <div>
+                <h1 class="contact-title">
+
+                    <span></span>
+
+                    Con<span style="color: #5e14d4dc;">t</span>act
+                </h1>
+            </div>
+            <div class="contact">
+                <div class="contact-left">
+                    <img src="img/contact-us.png" alt="">
+                </div>
+                <div class="contact-right">
+                    <form action="">
+                        <input type="text" placeholder="Your Name" class="text-field">
+                        <input type="email" placeholder="Your Email" class="text-field">
+                        <textarea placeholder="Your Message" class="text-field" cols="30" rows="10"></textarea>
+                        <button class="btn"><span>Submit</span> </button>
+                    </form>
+                </div>
+            </div>
         </section>
 
 
