main thin comple

--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
 
                     <span></span>
 
-                    Con<span style="color: #5e14d4dc;">t</span>act
+                    Con<span style="color: #E02C6D;">t</span>act
                 </h1>
             </div>
             <div class="contact">
