--- a/index.html
+++ b/index.html
@@ -63,6 +63,30 @@
 
         </section>
 
+
+        <section class="container">
+
+            <div id="logo-border">
+
+                <div class="company-logo">
+
+                    <img src="logos/Alibaba.svg" alt="">
+
+                    <img src="logos/Daraz.pk Logo.svg" alt="">
+                    <img src="logos/Ebay.svg" alt="">
+                    <img src="logos/Rakuten.svg" alt="">
+                    <img src="logos/Target.svg" alt="">
+                    <img src="logos/Walmart.svg" alt="">
+
+
+
+                </div>
+            </div>
+
+
+
+        </section>
+
         <section class="container">
 
             <h1>Popular Collection</h1>
